<resources>
    <string name="app_name">Smart Traffic Collection</string>
    <string name="hint_editText_name">Enter name</string>
    <string name="hint_editText_road">Enter road</string>
    <string name="text_btn_start">Start</string>
    <string name="text_btn_push_data">Save</string>
    <string name="btn_shock_point">Shock Point</string>
    <string name="btn_speed_up">Speed Up</string>
    <string name="btn_brake_down">Brake Down</string>
    <string name="btn_parking">Parking</string>
    <string name="textView_speed_label">Speed</string>
    <string name="btn_finish">Log out</string>
    <string name="btn_manage">Map</string>
    <string name="btn_back_to_main">Go Back</string>
    <string name="btn_change_road">Road List</string>
    <string name="btn_tool">Road Tools</string>
    <string name="btn_delete_shock_point">Delete</string>
    <string name="btn_view_data">View Data</string>
    <string name="textView_shock_point_tittle">Shock Point</string>
    <string name="textView_road_info_tittle">Road Info</string>
    <string name="btn_delete_road">Delete</string>
    <string name="btn_edit_road">Edit</string>
    <string name="textView_road_name">Name</string>
    <string name="textView_road_name_hint">Road Name</string>
    <string name="btn_save_road">Save</string>
    <string name="btn_back_from_view_data">Back</string>
    <string name="btn_road_name">Change road</string>
    <string name="tv_road_short_name">Short Name</string>
    <string name="tv_road_long_name">Long Name</string>
    <string name="btn_auto_road">Auto detect</string>
    <string name="btn_manual_road">Manually edit</string>
    <string name="btn_set_road_done">OK</string>
    <string name="btn_start_record">Start Record</string>
    <string name="btn_stop_record">Stop Record</string>
    <string-array name="speeds_array">
        <item>50km/h</item>
        <item>60km/h</item>
        <item>70km/h</item>
        <item>80km/h</item>
        <item>90km/h</item>
        <item>100km/h</item>
        <item>110km/h</item>
        <item>120km/h</item>
    </string-array>
    <string name="title_activity_login">Smart Traffic Collection</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed_tittle_dialog">Opps</string>
    <string name="login_failed">Login failed</string>
    <string name="login_error">Problem when connecting to server, please try again later</string>
    <string name="login_failed_message">Please check your username and password.</string>
    <string name="overwrite_data_warning">Warning</string>
    <string name="overwrite_data_warning_message">This road contains old data. Do you want to delete?</string>
    <string name="ok_button">OK</string>
    <string name="keep_button">Keep it</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="sensor_error_tittle">Error</string>
    <string name="sensor_error_message">Problem with sensors in this device</string>
    <string name="title_activity_maps">Manage Roads</string>
    <string name="title_show_road">Pick a road</string>
    <string name="title_road_empty">Opps</string>
    <string name="message_road_empty">Problem when getting roads from server, please try again</string>
    <string name="message_point_empty">This road contain no data</string>
    <string name="wrong_file_dialog_message">The file is not right-format. Please choose another file!</string>
    <string name="wrong_file_dialog_tittle">Opps</string>
    <string name="push_data_success_tittle">Success</string>
    <string name="push_data_success_message">Successfully save data to server</string>
    <string name="road_name_not_valid_tittle">Warning</string>
    <string name="road_name_not_valid_message">This road exits, please change other name</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_open_file">Open file</string>
    <string name="menu_item_save_to_server">Upload data to server</string>
    <string name="menu_item_manage_roads">Manage roads</string>
    <string name="menu_item_auto_mode">Automatic detect mode</string>
    <string name="menu_item_manual_mode">Manually detect mode</string>

</resources>
