<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout>

        <TextView
            android:id="@+id/textView_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_finish" />
    </LinearLayout>
    <LinearLayout>


        <Button
            android:id="@+id/btn_shock_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_shock_point" />

        <Button
            android:id="@+id/btn_speed_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_speed_up" />

        <Button
            android:id="@+id/btn_brake_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_brake_down" />

        <Button
            android:id="@+id/btn_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_parking" />
    </LinearLayout>

    <LinearLayout>

        <TextView
            android:id="@+id/textView_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_speed_label" />

        <Spinner
            android:id="@+id/spinner_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout>

        <Button
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resume"
            android:visibility="visible" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_push_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_push_data"
            android:visibility="visible" />

        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_manage" />


    </LinearLayout>


    <fragment
        android:id="@+id/view_data_fragment"
        android:name="com.duytry.smarttraffic.fragment.ViewDataFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

</TableLayout>